Fixed issue with overflow in Chrome and Safari

--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -3,31 +3,37 @@
   --highlight-color: #f5f5dc;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 .main {
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
   align-content: center;
+  object-fit: contain;
 
   @media (max-width: 700px) {
     align-self: center;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    max-width: 3300px;
+    max-width: 2500px;
+   
   }
+}
+
+.card{
+  overflow: hidden;
 }
 
 .resize {
   margin-top: 10px;
   width: 20%;
   height: auto;
+  @media (max-width: 700px) {
+    width: 15%;
+  }
 }
 
-a {
-  text-align: center;
+.links{
+  display: flex;
+  justify-content: center;
 }
